Added to assets folder JS and Vars Sass file Included Jquery

--- a/index.html
+++ b/index.html
@@ -6,22 +6,11 @@
     <title>wellsDev</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <style>
-      body {
-        width: 100vw;
-        height: 100vh;
-      }
-      h1{
-        top: 40%;
-        left: 40%;
-        display: inline-block;
-        position: absolute;
-        width: 300px;
-        margin: 0 auto;
-      }
-    </style>
   </head>
   <body>
-    <h1>Charlie Wells</h1>
-  </body>
+    <h1>Start this project!</h1>
+		<h4>wellsDev</h4>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="assets/js/global.js"></script>
+	</body>
 </html>
